[gd_scene load_steps=2 format=3 uid="uid://c8fsi0gws3ass"]

[ext_resource type="Script" path="res://NodeMenu.gd" id="1_2a42n"]

[node name="NodeMenu" type="Node2D"]
script = ExtResource("1_2a42n")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 234.0
offset_bottom = 202.0
color = Color(0.188235, 0.27451, 0.270588, 1)

[node name="OnlySelf" type="Button" parent="."]
offset_right = 235.0
offset_bottom = 31.0
text = "Only this node's edges visible"
alignment = 0

[node name="AllEdges" type="Button" parent="."]
offset_left = 2.0
offset_top = 35.0
offset_right = 234.0
offset_bottom = 66.0
text = "All edges visible"
alignment = 0

[node name="EdgeColor" type="Button" parent="."]
offset_left = 1.0
offset_top = 73.0
offset_right = 233.0
offset_bottom = 104.0
text = "Edge color picker"
alignment = 0

[node name="Button4" type="Button" parent="."]
offset_top = 109.0
offset_right = 235.0
offset_bottom = 141.0
text = "Node color picker"
alignment = 0

[node name="Button" type="Button" parent="."]
offset_left = 200.0
offset_top = -41.0
offset_right = 236.0
offset_bottom = -6.0
text = "X"

[connection signal="pressed" from="OnlySelf" to="." method="only_self_edges_visible"]
[connection signal="pressed" from="AllEdges" to="." method="_on_all_edges_pressed"]
[connection signal="pressed" from="EdgeColor" to="." method="_on_edge_color_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
